Mojo C++ bindings: support setting default value for fields whose types are typemapped enums.

BUG=738142

Review-Url: https://codereview.chromium.org/2965663002
Cr-Commit-Position: refs/heads/master@{#483561}

Former-commit-id: dc674b50f259153e15e9f1df37b320f4ffdb41bc